# Grafika

./: CMakeLists.txt
assets/: woman1.mtl
src/: Camera.cpp  Camera.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  main.cpp
src/shaders/: fragment_shader.glsl  sphere_fragment.glsl  vertex_shader.glsl
